# covid-sim

./: CMakeLists.txt
data/populations/: .gitignore
src/: CLI.cpp  CMakeLists.txt  CovidSim.cpp  Rand.cpp  Rand.h  SetupModel.cpp
